basic page template

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,9 +12,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-y: scroll; /* Prevent layout shift when scrollbar appears/disappears */
 }
 
 #root {
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
