--- a/src/shared/components/Navbar/Navbar.module.css
+++ b/src/shared/components/Navbar/Navbar.module.css
@@ -27,15 +27,17 @@
 }
 
 .logo {
-  height: 40px;
+  height: 50px;
   width: auto;
   object-fit: contain;
 }
 
 .brandName {
-  font-size: 1.5rem;
-  font-weight: 600;
+  font-style: Arial, sans-serif;
+  font-size: 2.5rem;
+  font-weight: 900;
   color: white;
+  letter-spacing: 0.02em;
 }
 
 .navLinks {
@@ -64,7 +66,7 @@
   }
 
   .brandName {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
   }
 
   .navLinks {
@@ -82,7 +84,7 @@
   }
 
   .brandName {
-    font-size: 1.1rem;
+    font-size: 1.25rem;
   }
 
   .navLinks {
