--- a/src/pages/Admin/Admin.module.css
+++ b/src/pages/Admin/Admin.module.css
@@ -1,7 +1,10 @@
 .admin {
   display: flex;
-  min-height: calc(100vh - 200px);
+  min-height: calc(100vh - 80px);
   width: 100%;
+  margin-left: -4.5rem;
+  margin-right: -4.5rem;
+  margin-bottom: -4rem;
 }
 
 .sidebar {
@@ -10,6 +13,7 @@
   border-right: 1px solid #e0e0e0;
   padding: 2rem 0;
   flex-shrink: 0;
+  min-height: calc(100vh - 80px);
 }
 
 .sidebarTitle {
@@ -94,6 +98,9 @@
 @media (max-width: 768px) {
   .admin {
     flex-direction: column;
+    margin-left: -3rem;
+    margin-right: -3rem;
+    margin-bottom: -3rem;
   }
 
   .sidebar {
@@ -101,6 +108,7 @@
     border-right: none;
     border-bottom: 1px solid #e0e0e0;
     padding: 1rem 0;
+    min-height: auto;
   }
 
   .sidebarTitle {
@@ -124,6 +132,14 @@
 
   .content {
     padding: 1.5rem 1rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .admin {
+    margin-left: -2.25rem;
+    margin-right: -2.25rem;
+    margin-bottom: -2rem;
   }
 }
 
