--- a/src/shared/components/Navbar/Navbar.module.css
+++ b/src/shared/components/Navbar/Navbar.module.css
@@ -399,6 +399,10 @@
   color: var(--very-light-purple);
 }
 
+.navLinkActive {
+  font-weight: 700;
+}
+
 /* Dropdown styles */
 .dropdownContainer {
   position: relative;
